--- a/css/utility.css
+++ b/css/utility.css
@@ -1,26 +1,30 @@
-/* .top {
-    position: relative; 
-    top: 0;
-    margin-top: 160px;
-} */
-
 h1 {
     line-height: 70px;
     color: white;
     font-size: 54px;
     font-weight: 400;
 }
-h2
-{
+
+h2 {
+    width: 450px;
+    margin: 0 auto;
     line-height: 70px;
-    font-size: 40px;
+    font-size: 46px;
     font-weight: 400;
     margin-bottom: 40px;
+    text-align: center;
 }
-h3
-{
+
+h3 {
     line-height: 45px;
     font-size: 30px;
+    font-weight: 300;
+    color: #000;
+}
+
+h4 {
+    line-height: 42px;
+    font-size: 18px;
     font-weight: 300;
 }
 
@@ -31,24 +35,37 @@ h3
     color: white;
 }
 
+.padding {
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
 button {
     width: 140px;
     height: 48px;
     font-size: 17px;
-    border-radius: 4px;
+    border-radius: 5px;
 }
 
 button a {
     color: #000;
 }
-.invert
-{
+
+button:hover {
+    box-shadow: -1px -1px 1px rgba(255, 252, 252, 0.8), 1px 1px 1px rgba(255, 255, 255, 0.915);
+}
+
+.invert {
     filter: invert(1);
 }
-.section-style
-{
+
+.section-style {
     height: 70vh;
-    padding-left: 68px;
-    padding-right: 68px;
-    margin-top: 90px;
+    padding-top: 90px;
+    margin: 0 100px 0 100px;
+}
+
+.bg-color {
+    background: #FCF0F4;
+    background: rgb(243 213 213 / 70%);
 }
