--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ header .buttons .btn {
 }
 
 #main-banner .left h1::before {
-    content: url(../images/banner-ring.png);
+    content: url(../images/banner-ring.webp);
     position: absolute;
     right: 163px;
     top: 73px;
@@ -201,8 +201,8 @@ header .buttons .btn {
 }
 
 #main-banner .right .images {
-    width: 265px;
-    height: 300px;
+    width: 400px;
+    height: 333px;
     position: relative;
 }
 
@@ -352,21 +352,22 @@ header .buttons .btn {
 /* product section ends */
 
 /* Testimonials section starts */
+
 #testimonials .section-style {
-    height: 61vh;
-    /* background: black; */
+    height: 75vh;
+    padding-top: 100px;
 }
 
 #testimonials h3 {
     text-align: center;
     width: 445px;
     margin: 0 auto;
-    /* color: #fff; */
+    color: #fff;
 }
 
 #testimonials .testimonials-header h2 {
     margin-bottom: 0;
-    /* color: #fff; */
+    color: #fff;
 }
 
 #testimonials .testimonials-header h3 {
@@ -374,7 +375,7 @@ header .buttons .btn {
     width: 500px;
     margin: 0 auto;
     font-weight: 400;
-    line-height: 54px;
+    line-height: 40px;
     margin-bottom: 13px;
 }
 
@@ -388,11 +389,11 @@ header .buttons .btn {
 
 #testimonials .testimonial-container .testimonial-cards {
     box-shadow: 0px 4px 100px 0px #1515151a;
-    height: 336px;
-    width: 511px;
-    padding: 25px 36px;
-    background: #fffbf752;
-    /* background: #fff; */
+    height: 348px;
+    width: 510px;
+    padding: 25px 46px;
+    background: #fff;
+    /* text-align: justify; */
 }
 
 #testimonials .testimonial-container .testimonial-cards:hover {
@@ -404,17 +405,18 @@ header .buttons .btn {
 }
 
 #testimonials .testimonial-container .testimonial-cards .testimonials-content {
-    height: 170px;
+    height: 180px;
 }
 
 #testimonials .testimonial-container .testimonial-cards .testimonials-content h4 {
     font-weight: 400;
+    line-height: 30px;
 }
 
 #testimonials .testimonial-container .testimonial-cards .author {
     display: flex;
     align-items: center;
-    padding-top: 15px;
+    padding-top: 17px;
 }
 
 #testimonials .testimonial-container .testimonial-cards .author img {
@@ -562,6 +564,7 @@ header .buttons .btn {
 
 #newsletter .aboveContent h2 {
     width: 350px;
+    line-height: 57px;
 }
 
 #newsletter .aboveContent form .emailBox {
@@ -598,7 +601,7 @@ header .buttons .btn {
 #footer .downContent {
     display: flex;
     justify-content: space-between;
-    padding: 90px 0;
+    padding: 100px 0;
 }
 #footer .downContent .leftContent
 {
@@ -636,7 +639,7 @@ header .buttons .btn {
     color: #fff;
 }
 #footer::before{
-    content: url(../images/footer-rose.png);
+    content: url(../images/footer-rose.webp);
     position: absolute;
     right: 100px;
     bottom: 10px;
@@ -659,6 +662,7 @@ header .buttons .btn {
 
 .form {
     background: #fff1e696;
+    /* background: #fff; */
 }
 
 .form .form-style .left {
@@ -744,6 +748,7 @@ button {
 
 #account a {
     text-decoration: underline;
+    padding-left: 5px;
 }
 
 .form-style .right {
