--- a/css/utility.css
+++ b/css/utility.css
@@ -72,7 +72,7 @@ h4 {
 }
 
 .section-style {
-    margin: 90px 100px 0 100px;
+    margin: 100px 100px 0 100px;
 }
 
 .bg-white{
@@ -82,5 +82,5 @@ h4 {
 }
 .bg-black
 {
-    background: #000;
+    background: #0B051F;
 }
